--- a/src/assets/scss/_button.scss
+++ b/src/assets/scss/_button.scss
@@ -26,7 +26,10 @@ a:hover{
   min-width: 220px;
   text-align: center;
   box-shadow: 0px 4px 4px rgba(255, 255, 255, 0.25);
+
+  
 }
+
 
 .btn-alat:hover{
   color: $white;
@@ -67,9 +70,11 @@ a:hover{
   }
 }
 
-input[type="button"]:disabled {
+input[type="button"]:disabled, .disabled-btn {
   background: #DADADA;
   color: #9c9c9c;
+  cursor: not-allowed;
+  pointer-events: none;
 }
 
 .block-btn {
