[Moshood Temitope] - Added security question and answers integration

--- a/src/components/onboarding/onboarding.scss
+++ b/src/components/onboarding/onboarding.scss
@@ -26,8 +26,13 @@
 .error-text{
   display: none;
 }
+.loading-text{
+  color: #AB2656;
+  text-align: center;
+  margin-top: 30px;
+}
 .form-error {
-  input, input[type='number'] {
+  input, input[type='number'], select {
     border: 1px solid #AB2656!important;
   }
   .error-text{
