--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -129,7 +129,8 @@ a {
 
 [type='text'], [type='password'], [type='date'], [type='datetime'], [type='datetime-local'], [type='month'], [type='week'], [type='email'], [type='number'], [type='search'], [type='tel'], [type='time'], [type='url'], [type='color'], select, textarea {
   /* Rectangle 7: */
-  border: 1px solid #C4C4D0 !important;
+  border: 1px solid ;
+  border-color:#C4C4D0 !important; 
   border-radius: 3px;
   -webkit-box-shadow: none;
   box-shadow: none;
