--- a/src/assets/scss/dashboard.scss
+++ b/src/assets/scss/dashboard.scss
@@ -15,7 +15,7 @@
   //box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
 }
 
-.logo-left {
+.logo-left{ 
   text-align: center;
   float: left;
   max-width: 240px;
@@ -1518,6 +1518,56 @@ ul.menu-side {
   }
 }
 
+.beneficiary-card {
+  padding: 25px 20px;
+  cursor: pointer;
+
+  &:hover {
+
+  }
+
+  .network-img {
+    float: left;
+    width: 20%;
+  }
+
+  .all-info {
+    width: 80%;
+    float: left;
+    p {
+      margin-bottom: 8px;
+      span {
+        float: right;
+        font-family: $medium;
+        color: $primary-color;
+      }
+    }
+  }
+
+  .nickname {
+    color: #717171;
+    span {
+      float: right;
+    }
+  }
+
+  .account-info {
+    font-family: $medium;
+    font-size: em(16);
+    margin-bottom: 0 !important;
+    .bank-name {
+      float: right;
+      color: #b1b1b1;
+
+      a {
+        display: inline-block;
+        padding: 0 10px;
+        color: #b1b1b1;
+      }
+    }
+  }
+}
+
 
 .airtime-card {
   padding: 25px 20px;
@@ -1540,7 +1590,7 @@ ul.menu-side {
       span {
         float: right;
         font-family: $medium;
-        color: $primary-color;
+        // color: $primary-color;
       }
     }
   }
