--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1104,3 +1104,61 @@ body {
     .onboarding .inner {
       margin: 50px auto;
       background-image: none; } }
+
+/* toggle button */
+.switch {
+  position: relative;
+  width: 0.7rem;
+  height: 0.9rem;
+  border-radius: 20%;
+  transition: background-color 100ms ease-out;
+  z-index: 1;
+}
+.switch:before, .switch:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  background-color: inherit;
+  border-radius: 50%;
+  width: 1rem;
+  height: 0.9rem;
+  z-index: 2;
+}
+.switch:before {
+  left: -0.5rem;
+}
+.switch:after {
+  right: -0.5rem;
+}
+
+.toggle-button {
+  position: absolute;
+  width: 0.9em;
+  height: 0.9em;
+  border-radius: 50%;
+  background-color: #fff;
+  transition: -webkit-transform 100ms ease-in-out;
+  transition: transform 200ms ease-in-out;
+  transition: transform 200ms ease-in-out, -webkit-transform 200ms ease-in-out;
+  z-index: 3;
+  border: 0.05rem solid #fff;
+  top: 0.05rem;
+}
+
+.switch_is-off {
+  background-color: #ccc;
+}
+
+.switch_is-on {
+  background-color: #d9534f;
+}
+
+.toggle-button_position-left {
+  -webkit-transform: translateX(-0.4rem);
+          transform: translateX(-0.4rem);
+}
+
+.toggle-button_position-right {
+  -webkit-transform: translateX(0.33rem);
+          transform: translateX(0.33rem);
+}
