--- a/src/assets/scss/_button.scss
+++ b/src/assets/scss/_button.scss
@@ -85,62 +85,57 @@ input[type="button"]:disabled, .disabled-btn {
 //toggle buttonn
 .switch {
   position: relative;
-	width: 8rem;
-	height: 5rem;
-	border-radius: 20%;
-	transition: background-color 100ms ease-out;
-	z-index: 1;
-	&:before, &:after{
+  width: 0.7rem;
+  height: 0.9rem;
+  border-radius: 20%;
+  transition: background-color 100ms ease-out;
+  z-index: 1;
+  &:before, &:after {
     content: "";
-		position: absolute;
-		top: 0;
-		background-color: inherit;
-		border-radius: 50%;
-		width: 5rem;
-		height: 5rem;
-		z-index: 2;
+    position: absolute;
+    top: 0;
+    background-color: inherit;
+    border-radius: 50%;
+    width: 1rem;
+    height: 0.9rem;
+    z-index: 2;
   }
-		
-	&:before{
-    left: -1rem
+  &:before {
+    left: -0.5rem;
   }
-	&:after {
-    right: -1rem
+  &:after {
+    right: -0.5rem;
   }
 }
-	
-	
-.toggle-button{
+
+.toggle-button {
   position: absolute;
-	width: 4.6rem;
-	height: 4.6rem;
-	border-radius: 50%;
-	transition: transform 100ms ease-in-out;
-	z-index: 3;
-	border: 0.05rem solid #fff;
-	top: 0.16rem;
+  width: 0.9em;
+  height: 0.9em;
+  border-radius: 50%;
+  background-color: #fff;
+  transition: -webkit-transform 100ms ease-in-out;
+  transition: transform 200ms ease-in-out;
+  transition: transform 200ms ease-in-out, -webkit-transform 200ms ease-in-out;
+  z-index: 3;
+  border: 0.05rem solid #fff;
+  top: 0.05rem;
 }
-	
 
 .switch_is-off {
-  background-color: #fff;
-	border: 0.1rem solid #9c9c9c;
+  background-color: #ccc;
 }
-	
 
-.switch_is-on{
-  background-color: #d9534f
+.switch_is-on {
+  background-color: #d9534f;
 }
-	
 
-.toggle-button_position-left{
-  transform: translateX(-0.8rem);
-	background-color: #ccc;
+.toggle-button_position-left {
+  -webkit-transform: translateX(-0.4rem);
+  transform: translateX(-0.4rem);
 }
-	
 
-.toggle-button_position-right{
-  transform: translateX(4.0rem);
-	background-color: #fff;
+.toggle-button_position-right {
+  -webkit-transform: translateX(0.33rem);
+  transform: translateX(0.33rem);
 }
-	
