[Moshood]- Added Error handling for API calls on bank Transfer landing page

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -181,6 +181,7 @@ select {
   padding: 8px 15px;
   font-size: 1em;
   border-radius: 3px;
+  text-align: center;
   color: #444;
   margin-bottom: 30px; }
   .info-label.error {
