--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -154,6 +154,7 @@ select {
    border-radius: 3px;
    color: #444;
    margin-bottom: 30px;
+   text-align: center;
 
    &.error {
     color: rgba(137, 2, 18, 0.91);
