--- a/src/assets/scss/dashboard.scss
+++ b/src/assets/scss/dashboard.scss
@@ -2263,3 +2263,22 @@ p.resend-otp, .resend-otp {
   }
 
 }
+
+.goback {
+  background:none;
+  border:none;
+  cursor:pointer;
+  &:hover {
+    color: $primary-color;
+  }
+}
+
+.delete-bene {
+  position: absolute;
+  top: 46%;
+  left: 85%;
+  color: #b1b1b1;
+  &:hover {
+    color: $primary-color;
+  }
+} 
