--- a/src/components/transfer/transfer.scss
+++ b/src/components/transfer/transfer.scss
@@ -2,6 +2,55 @@
 // @import '../../assets/scss/mixins';
 // @import '../../assets/scss/button';
 
+// .modal-heading{
+//   color: #AB2656;
+// }
+
+.hide{
+  display: none
+}
+.proceed-ctas{
+  .btn-alat{
+    min-width: unset;
+    width: 100%;
+    &.light-btn{
+      background: #FDFEFE;
+      color: #BDC3C7;
+      border: 1px solid #D7DBDD;
+      &:hover{
+        color: #AB2656;
+        border: 1px solid #AB2656;
+      }
+    }
+  }
+}
+.search-beneficiary{
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.05);
+  padding: 15px 15px;
+  background: #fff;
+  border-radius: 57px;
+  margin-bottom: 20px;
+  input{
+    border-radius: 24px!important;
+    text-align: center;
+  }
+}
+.see-more-cta {
+  text-align: center;
+  margin-bottom: 20px;
+  a:not([href]):not([tabindex]), &:hover{
+    color: #AB2656;
+    &:hover{
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  }
+}
+.div-modal h3.modal-heading {
+  color: #AB2656;
+  margin-bottom: 10px;
+  font-size: 21px;
+}
 .error-msg{
   color: #AB2656;
 }
@@ -76,16 +125,25 @@ a:not([href]):not([tabindex]).cta-link{
           float: right;
           // font-family: $medium;
           // color: $primary-color;
+          &.nickname-text{
+            float: none;
+          }
         }
       }
     }
   
-    .nickname {
+    .summary-info {
       color: #717171;
       font-weight: 600;
       font-size: 14px;
       span {
         float: right;
+      }
+      i{
+        color: #b1b1b1;
+        &:hover{
+          color: #AB2656;
+        }
       }
     }
   
