--- a/src/assets/scss/dashboard.scss
+++ b/src/assets/scss/dashboard.scss
@@ -1508,6 +1508,63 @@ p.resend-otp, .resend-otp {
   }
 }
 
+//Fund Card
+.fund-card-ctn{
+  box-shadow: 0px 2px 11px rgba(255, 255, 255, 0.103431);
+  .fund-card{
+    background: url(../img/credit-card.svg);
+    background-size: cover;
+    background-position: center;
+    max-width: 400px;
+    max-height: 131px;
+    border-radius: 4px;
+    margin-bottom: 10px;
+    color: white;
+    padding: 25px 20px;
+    font-family: Proxima Nova;
+    a{
+      color:white;
+      float: right;
+    }
+    .card-alias{
+      font-size: 14px;
+      line-height: 17px;  
+    }
+    .card-star{
+      font-family: Rubik;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 18px;
+      line-height: 18px;
+      margin-right:9px;
+    }
+    .card-digit{
+      margin-top: 17px;
+    }
+    .card-no{
+      font-size: 20px;
+      line-height: 24px;
+    }
+    .card-expires{
+      font-size: 12px;
+      line-height: 15px;
+      text-transform: uppercase;
+      color: rgba(255, 255, 255, 0.461843);
+    }
+  }
+}
+
+.btn-alat-small{
+  color: white !important;
+  min-width: unset;
+}
+
+.line-header{
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 110px !important;
+  align-items: center;
+}
 
 // Statement Pagination
 .history-paginate {
