Added confirm page

--- a/src/components/transfer/transfer.scss
+++ b/src/components/transfer/transfer.scss
@@ -132,6 +132,9 @@ a.edit-cta:not([href]):not([tabindex]){
 }
 .error-msg{
   color: #AB2656;
+  &.block-msg{
+    display: block;
+  }
 }
 .info-label.error{
   margin: 0 70px;
