--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -925,7 +925,13 @@ a {
 
 a:hover {
   color: #AB2656;
-  text-decoration: underline; }
+  text-decoration: underline; }  
+  
+  .btn-alat-outline{
+    background: unset !important;
+    color: #9D0F3E !important;
+    border: 1px solid #9D0F3E !important;
+  }
 
 .btn-alat {
   background: #AB2656;
