--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -1435,6 +1435,88 @@ ul.menu-side {
 .bx-wrapper .bx-next:hover, .bx-wrapper .bx-next:focus {
   background-position: initial; }
 
+  /* Bx slider ends */
+/* Main slider starts */
+.acct-match {
+  height: 332px !important; }
+
+.slider {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+  border: none;
+  box-shadow: none;
+  background: none;
+  margin: 0 auto; }
+  .slider a.previousButton, .slider a.nextButton {
+    font-size: 22px;
+    line-height: 0;
+    display: block;
+    position: absolute;
+    top: 25%;
+    transform: translateY(-50%);
+    transition: all .3s linear;
+    z-index: 1;
+    padding: 10px;
+    text-decoration: none;
+    backface-visibility: hidden;
+    /* prevent jump effect when scaling */ }
+    .slider a.previousButton:not(.disabled):hover, .slider a.nextButton:not(.disabled):hover {
+      transform: translateY(-50%) scale(1.25);
+      cursor: pointer; }
+    .slider a.previousButton svg polygon, .slider a.nextButton svg polygon {
+      fill: #e1e1e1; }
+  .slider a.previousButton {
+    left: 10px; }
+  .slider a.nextButton {
+    right: 10px; }
+
+.slider a.previousButton:not(.disabled):hover, .slider a.nextButton:not(.disabled):hover {
+  -webkit-transform: translateY(-50%) scale(1.25);
+  transform: translateY(-50%) scale(1.25);
+  cursor: pointer; }
+
+.slider a.previousButton {
+  left: 10px; }
+
+.slider a.nextButton {
+  right: 10px; }
+
+.slide {
+  position: absolute;
+  overflow: hidden; }
+
+.slide.hidden {
+  visibility: hidden; }
+
+.slide.previous {
+  left: -100%; }
+
+.slide.current {
+  left: 60px; }
+
+.slide.next {
+  left: 100%; }
+
+.slide.animateIn,
+.slide.animateOut {
+  -webkit-transition: all 2s ease;
+  transition: all 2s ease; }
+
+.slide.animateIn.previous,
+.slide.animateIn.next {
+  left: 0;
+  visibility: visible; }
+
+.slide.animateOut.previous {
+  left: 100%; }
+
+.slide.animateOut.next {
+  left: -100%; }
+
+/* Main slider ends */
+
 .acct-card-pad {
   padding-bottom: 40px !important;
   min-height: 325px; }
