--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1200,6 +1200,23 @@ body {
   font-size: 0.85714em;
   margin-top: 10px; }
 
+  .pw-terms{
+    display : flex;
+    justify-content: space-evenly;
+  font-size: 12px;
+  line-height: 16px;
+  /* or 133% */
+  letter-spacing: -0.342857px;
+    }
+  
+    .pw-terms>div{
+      padding-left: 5px;
+    }
+  
+    .pw-terms>div>b{
+      padding-top: 20px;
+    }
+
 .pw-reset-sent h3 {
   margin-bottom: 20px; }
 
